--- a/style.css
+++ b/style.css
@@ -25,22 +25,22 @@ body {
   right: 1rem;
 }
 
-.notes {
+.note {
   background-color: #fff;
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
   margin: 20px;
   height: 400px;
   width: 400px;
-  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
 }
 
-.notes .tools {
+.note .tools {
   background-color: #9ec862;
   display: flex;
   justify-content: flex-end;
   padding: 0.5rem;
 }
 
-.notes .tools button {
+.note .tools button {
   background-color: transparent;
   border: none;
   color: #fff;
@@ -49,14 +49,14 @@ body {
   margin-left: 0.5rem;
 }
 
-.notes .main {
+.note .main {
   background-color: #eee;
   overflow: hidden;
   height: 400px;
   width: 100%;
 }
 
-.notes textarea {
+.note textarea {
   outline: none;
   font-family: inherit;
   font-size: 1.2rem;
@@ -65,6 +65,6 @@ body {
   width: 100%;
 }
 
-.notes .hidden {
+.note .hidden {
   display: none;
 }
